--- a/package.json
+++ b/package.json
@@ -15,11 +15,14 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@hookform/resolvers": "^5.1.1",
     "axios": "^1.9.0",
+    "chart.js": "^4.5.0",
     "cookie": "^1.0.2",
     "daisyui": "^5.0.43",
     "formik": "^2.4.6",
     "next": "^15.3.3",
+    "papaparse": "^5.5.3",
     "react": "^19.1.0",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.57.0",
     "react-toastify": "^11.0.5",
