--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
@@ -19,6 +20,7 @@
     "chart.js": "^4.5.0",
     "cookie": "^1.0.2",
     "daisyui": "^5.0.43",
+    "date-fns": "^4.1.0",
     "formik": "^2.4.6",
     "next": "^15.3.3",
     "papaparse": "^5.5.3",
